refactored logic for equals implementation of qjs, fjs, qu